[metadata]
name = concurrency
description = Masterclass on concurrency in Python
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages =
;    concurrency
    async_mc
python_requires = >=3.9
